# Guanaco

./: .gitignore  CMakeLists.txt  README.md
docs/: BENCHMARKS.md  PINNING.md
examples/: CMakeLists.txt  guanaco_example.cpp
include/guanaco/: guanaco.h  guanaco_backend_wrap.h  guanaco_model_hook.h
patches/: common-arg.cpp.patch  common-common.cpp.patch  common-common.h.patch  common-download.cpp.patch  common-download.h.patch  ggml-include-ggml-cpu.h.patch  ggml-src-ggml-cpu-repack.cpp.patch  llama-context.cpp.patch  llama-graph.cpp.patch  llama-model.cpp.patch  llama-model.h.patch  llama.cpp.patch  llama.h.patch  server-context-ckpt-restore.patch
src/: guanaco_backend_wrap.cpp  guanaco_executor.cpp  guanaco_herdcache.cpp  guanaco_io_uring.cpp  guanaco_manifest.cpp  guanaco_model_hook.cpp  guanaco_router.cpp  guanaco_steppeloader.cpp
src/imatrix_shim/: common.h  log.h
tools/: guanaco-repack.cpp
